# DJI_Thermal_IMG_Report_Generetor

./: .gitignore  LICENCE  README.md  build.bat  cli.py  generator.py  gui.py  main.py  pyproject.toml  requirements-linux.txt  requirements.txt  template.html  utils.py
components/: gallery_item.py  spin_box.py
lut/: lut0.json  lut0.raw  lut2.json  lut2.raw  lut3.raw  lut4.json  lut5.json  lut7.raw  lut8.json  lut9.json  lut_mapping.py
luts/: lut1.json  lut1.raw  lut3.json  lut4.raw  lut5.raw  lut6.json  lut6.raw  lut7.json  lut8.raw  lut9.raw
requirements/: requirements-cli-linux.txt  requirements-cli-win.txt  requirements-gui-linux.txt  requirements-gui-win.txt  requirements-linux.txt  requirements-win.txt
